fix goofy wrapping of main nav

--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ header{
 .navigazione{
     background-color: #211f1f;
     box-shadow: 0px 0px 5px black;
+    float: left;
 }
 .nav ul li a{
     line-height: 40px;
